fixes horizontal scroll caused by Flickr block

--- a/themes/fu2013/less/fu2012.base.less
+++ b/themes/fu2013/less/fu2012.base.less
@@ -687,7 +687,7 @@ nav[role="custom-dropdown"] {
     margin-bottom: 0;
   }
   .content {
-    margin-right: -30px;
+    margin-right: -15px;
   }
 }
 
